--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "scripts": {
     "build": "webpack --config ./webpack.config.js",
-    "publish": "powershell compress-archive -Force './dist','./manifest.json','./styles','./icon.png' Extension.zip"
+    "build:dev": "webpack --config ./webpack.config.js --mode development",
+    "type-check": "tsc --noEmit",
+    "publish": "powershell compress-archive -Force './dist','./manifest.json','./styles','./icon.png' Extension.zip",
+    "publish:firefox": "7z a Extension.zip dist popup styles manifest.json icon.png"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chrome": "^0.1.1",
+    "@types/feather-icons": "^4.29.4",
     "css-loader": "^6.7.1",
     "raw-loader": "^4.0.2",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
+    "webextension-polyfill": "^0.12.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   },
